more dataModel updates, fixed text wrapping issue in search results

--- a/public/css/module/api-search.less
+++ b/public/css/module/api-search.less
@@ -218,6 +218,7 @@
 
     .description, .title, > .path {
       padding: 0 5px 0 5px;
+      white-space: normal;
     }
 
     .title {
